--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "name": "wallpapers-server",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "dev": "npm-run-all --parallel start playground",
-    "playground": "graphql playground"
+    "dev": "nodemon src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "lint": "eslint . --ext ts,js && tsc --noEmit"
   },
   "dependencies": {
-    "graphql-import": "0.4.2",
-    "graphql-yoga": "1.2.2",
-    "prisma-binding": "1.5.4"
+    "graphql-import": "^0.6.0",
+    "graphql-yoga": "1.2.2"
   },
   "devDependencies": {
-    "graphql-cli": "2.13.0",
-    "npm-run-all": "4.1.2",
-    "prisma": "1.1.3",
+    "eslint": "^5.0.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "nodemon": "^1.17.5",
     "ts-node": "4.1.0",
-    "typescript": "2.7.1"
+    "typescript": "2.7.1",
+    "typescript-eslint-parser": "^16.0.1"
   }
 }
