--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "start": "node dist/index.js",
+    "start": "node dist/index.js --production",
     "build": "tsc",
     "lint": "eslint . --ext ts,js && tsc --noEmit"
   },
   "dependencies": {
-    "graphql-import": "^0.6.0",
-    "graphql-yoga": "1.2.2"
+    "@google-cloud/datastore": "^1.4.1",
+    "@google-cloud/storage": "^1.7.0",
+    "graphql-yoga": "1.2.2",
+    "json5": "^1.0.1",
+    "mongodb": "^3.1.1"
   },
   "devDependencies": {
+    "@types/google-cloud__datastore": "^1.3.1",
+    "@types/google-cloud__storage": "^1.1.8",
     "eslint": "^5.0.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.13.0",
